[project]
name = "notifyhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
