[project]
name = "notifyhub"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "pony>=0.7.19",
    "pydantic-settings>=2.14.1",
]

[tool.pyrefly]
project-includes = [
    "src/**/*.py*",
    "test/**/*.py*",
]
min-severity = "warn"


[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pyrefly>=1.1.1",
    "ruff>=0.15.20",
]
test = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]
